--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Essays'
+- GITenberg
 tableOfContents: The inner beauty -- Silence -- The invisible goodness.
 title: The Inner Beauty
 url: http://www.gutenberg.org/ebooks/34910
